--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "electron": "^1.7.11",
     "jshint": "^2.9.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2"
+  }
 }
